[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "2023"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
peewee = "^3.15.4"
psycopg2-binary = "^2.9.5"
python-multipart = "^0.0.5"
python-dotenv = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
